# taxonomy_lookup

./: Cargo.toml  ids_from_genbank.py
.github/workflows/: rust_build.yml
src/: lib.rs  rank.rs  taxonomy_db.rs
