[package]
name = "taxonomy_lookup"
version = "0.1.0"
authors = ["Benjamin Weinstein-Raun <b@w-r.me>"]
edition = "2021"
description = "Look up taxonomic information given an NCBI accession number"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
flate2 = "1.0"
tar = "0.4"
# NOTE: do not upgrade sled beyond 0.34 without taking into account that this
# will necessitate a migration
sled = { version = "0.34", features = ["compression"] }
xdg = "2.1"
